import { Member, MemberRole } from 'productboard-common'
import { Column, Entity, JoinColumn, ManyToOne, PrimaryColumn } from 'typeorm'
import { ProductEntity } from './product'
import { UserEntity } from './user'


@Entity()
export class MemberEntity extends Member {
    @PrimaryColumn({ nullable: false })
    override id: string

    @Column({ nullable: false, default: false })
    override deleted: boolean

    @ManyToOne(() => ProductEntity)
    @JoinColumn({ name: 'productId' })
    product: ProductEntity

    @Column({ nullable: false })
    override productId: string

    @ManyToOne(() => UserEntity)
    @JoinColumn({ name: 'userId' })
    user: UserEntity

    @Column({ nullable: false })
    override userId: string

    @Column({ nullable: false, type: 'enum', enum: ["manager", "engineer", "customer"] })
    override role: MemberRole
}