classDiagram
    direction LR

    class User {
        id: string &lcub;readOnly&rcub;
        deleted: boolean
        name: string 
        email: string
        password: string
        userManager: boolean
        productManager: boolean
    }
    class Image {
        id: string &lcub;readOnly&rcub;
    }
    class Product {
        id: string &lcub;readOnly&rcub;
        deleted: boolean
        name: string
        description: string
    }
    class Member {
        id: string &lcub;readOnly&rcub;
        deleted: boolean
        role: 'manager' | 'engineer' | 'customer'
    }
    class Version {
        id: string &lcub;readOnly&rcub;
        deleted: boolean
        time: timestamp &lcub;readOnly&rcub;
        major: number
        minor: number
        patch: number
        description: string &lcub;markDown&rcub;
    }
    class Model {
        id: string &lcub;readOnly&rcub;
    }
    class Node {
        type: string &lcub;readOnly&rcub;
        name: string &lcub;readOnly&rcub;
    }
    class Group {
    
    }
    class Mesh {
        geometry: Geometry &lcub;readOnly&rcub;
        material: Material &lcub;readOnly&rcub;
    }
    class Reference {
        path: string &lcub;readOnly&rcub;
    }
    class Issue {
        id: string &lcub;readOnly&rcub;
        deleted: boolean
        time: timestamp &lcub;readOnly&rcub;
        label: string
        description: string &lcub;markDown&rcub;
        state: 'open' | 'closed'
    }
    class Comment {
        id: string &lcub;readOnly&rcub;
        deleted: boolean
        time: timestamp &lcub;readOnly&rcub;
        text: string &lcub;markDown&rcub;
        action: 'none' | 'close' | 'reopen'
    }
    class Milestone {
        id: string &lcub;readOnly&rcub;
        deleted: boolean
        start: date
        end: date
        label: string
        description: string
    }

    <<Entity>> User
    <<Entity>> Product
    <<Entity>> Member
    <<Entity>> Version
    <<Entity>> Issue
    <<Entity>> Comment
    <<Entity>> Milestone

    <<File>> Image
    <<File>> Model
    <<Data>> Node
    <<Data>> Group
    <<Data>> Mesh

    <<Data>> Reference

    User "1" <.. "*" Member : references <br> {readOnly}

    Member "*" --* "1" Product : contains


    User "1" <.. "*" Product : created by <br> {readOnly}
    User "1" <.. "*" Version : created by <br> {readOnly}
    User "1" <.. "1" Image : contains
    User "1" <.. "*" Issue : created by <br> {readOnly}
    User "*" <.. "*" Issue : assigned to
    User "1" <.. "*" Comment : created by <br> {readOnly}
    User "1" <.. "*" Milestone : created by <br> {readOnly}
    
    Product "1" *-- "*" Milestone : contains
    Product "1" *-- "*" Issue : contains

    Node <|-- Group
    Node "*" --* "1" Group : contains <br> {readOnly}
    Node <|-- Mesh
    Model "1" *-- "1" Node : contains <br> {readOnly}
    Node "1" <.. "*" Reference : references <br> {readOnly}

    Version "*" --* "1" Product : contains
    Version "1" *-- "1" Model : contains <br> {readOnly}
    Version "1" ..> "*" Version : based on <br> {readOnly}
    Version "*" *-- "*" Reference : contains

    Issue "*" ..> "0..1" Milestone : assigned to
    Issue "*" *-- "*" Reference : contains
    Issue "1" *-- "*" Comment : contains
    Comment "*" *-- "*" Reference : contains